# gtkbrowser

./: .gitignore  CMakeLists.txt  GES.md  README.md  ROADMAP.md  SKILL.md  axon  axonsurf  install.sh
extensions/: auto-scroll.js  click-counter.js  color-changer.js  cookie-manager.js  form-filler.js  page-analyzer.js  proxy-manager.js
extensions/cookie-manager/: background.js  content.js
scripts/: install-deps.sh  run-headless.sh
src/: browser.c  browser.h  command.c  extensions.c  extensions.h  headless.c  input.c  main.c  page.c  page.h  profile.c  profile.h  video.c
src/commands/: elements.h  extensions.c  extensions.h  input.c  input.h  media.c  media.h  monitoring.h  navigation.h  screenshot.c  screenshot.h  storage.h  tabs.h  window.h
src/core/: command.c  main.c
src/elements/: elements.c
src/extensions/: extensions.c  extensions.h
src/headless/: headless.c
src/input/: input.c
src/media/: media.c  screenshot.c
src/navigation/: navigation.c
src/storage/: profile.c
tests/: run_tests.sh
